force-app/main/default/objects/Merit_Data_Source__c/Merit_Data_Source__c.object-meta.xml
<CustomObject>
    <description>Satish 4/11/2019 - Object to track source of data in Merit</description>
    <label>Merit Data Source</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merit Data Source</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>