force-app/main/default/objects/Merit_Data_Source__c/fields/Last_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Upload_Date__c</fullName>
    <description>Satish 4/11/2019 - Latest date data was imported to Merit</description>
    <label>Last Upload Date</label>
    <summarizedField>Merit_Update_Schedule__c.Upload_Date__c</summarizedField>
    <summaryForeignKey>Merit_Update_Schedule__c.Merit_Data_Source__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>