force-app/main/default/objects/Merit_Data_Source__c/fields/Navigation__c.field-meta.xml
<CustomField>
    <fullName>Navigation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Navigation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>