force-app/main/default/objects/Merit_Data_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Frequency__c</columns>
    <columns>Last_Upload_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Source__c</columns>
    <columns>Description__c</columns>
    <columns>Navigation__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>